refcator(translations): add some translations to the tasks list

--- a/client/client/scripts/pile/locales/en.json
+++ b/client/client/scripts/pile/locales/en.json
@@ -1,1 +1,6 @@
-{}
+{
+  "SEARCH_TASK_BY_NAME":
+                        "Search by task name, case sensitive.",
+  "NO_MATCHING_TASK":
+                        "No task macthing filters found."
+}
