feat(task sorting): add controls to sort tasks

--- a/client/client/scripts/navigation/locales/en.json
+++ b/client/client/scripts/navigation/locales/en.json
@@ -1,1 +1,8 @@
-{}
+{
+  "SORT_BY":
+                  "Sort by",
+  "PRIORITY":
+                  "Priority",
+  "CREATION_DATE":
+                  "Created"
+}
