refactor(misc): correct filters date format, sorting, tab nav

--- a/client/client/scripts/user/locales/en.json
+++ b/client/client/scripts/user/locales/en.json
@@ -10,5 +10,7 @@
   "LOGIN":
                         "Login",
   "LOGIN_ACTION":
-                        "Login"
+                        "Login",
+  "LOGGED_OUT":
+                        "You are logged out."
 }
