--- a/client/client/scripts/user/locales/en.json
+++ b/client/client/scripts/user/locales/en.json
@@ -12,5 +12,7 @@
   "LOGIN_ACTION":
                         "Login",
   "LOGGED_OUT":
-                        "You are logged out."
+                        "You are logged out.",
+  "USER_NAME":
+                        "User name"
 }
