--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -15,6 +15,8 @@
         "Diagram",
   "FORM":
         "Form",
+  "NO_TASK_FORM":
+        "",
   "HISTORY":
         "History",
   "DESCRIPTION":
