refactor(login): harmonize login form with cockpit
Related to: CAM-2656

--- a/client/client/scripts/user/locales/en.json
+++ b/client/client/scripts/user/locales/en.json
@@ -7,10 +7,12 @@
                         "User name",
   "PASSWORD":
                         "Password",
+  "PLEASE_SIGN_IN":
+                        "Please sign in",
   "LOGIN":
                         "Login",
-  "LOGIN_ACTION":
-                        "Login",
+  "SIGN_IN_ACTION":
+                        "Sign in",
   "LOGGED_OUT":
                         "You are logged out.",
   "USER_NAME":
