refactor(navigation): harmonize navigation
improve(login): create a directive for the login form
fix(login): focus the username field in FF

Related to: CAM-2658

--- a/client/client/scripts/user/locales/en.json
+++ b/client/client/scripts/user/locales/en.json
@@ -4,7 +4,7 @@
   "CREDENTIALS_ERROR":
                         "Can not log in with those credentials.",
   "USERNAME":
-                        "User name",
+                        "Username",
   "PASSWORD":
                         "Password",
   "PLEASE_SIGN_IN":
@@ -13,6 +13,10 @@
                         "Login",
   "SIGN_IN_ACTION":
                         "Sign in",
+  "SIGN_OUT_ACTION":
+                        "Sign out",
+  "MY_PROFILE":
+                        "My profile",
   "LOGGED_OUT":
                         "You are logged out.",
   "USER_NAME":
