feat(user session): present login screen when a session expires
Related to: #CAM-2558

--- a/client/client/scripts/user/locales/en.json
+++ b/client/client/scripts/user/locales/en.json
@@ -20,5 +20,9 @@
   "LOGGED_OUT":
                         "You are logged out.",
   "USER_NAME":
-                        "User name"
+                        "User name",
+  "SESSION_EXPIRED":
+                        "Your session has expired",
+  "SESSION_EXPIRED_MESSAGE":
+                        "You need to sign in again."
 }
