feat(filters): implement the new REST filter service
This commit is a first shot of the new REST filter service usage.

Related to:
#CAM-2651
#CAM-2649
#CAM-2648
#CAM-2650

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -10,10 +10,12 @@
   "FILTER_DELETION_WARNING":
                         "Deleting the filter can not be undone, are your sure to want to proceed?",
   "FILTER_DELETION_SUCCESS":
-                        "Something went wrong while deleting the filter.",
-  "FILTER_DELETION_ERROR":
                         "The filter has been deleted.",
+  "FILTER_DELETION_ERROR":
+                        "Something went wrong while deleting the filter.",
 
+  "FILTER_SAVE_SUCCESS":
+                        "The filter was saved.",
 
   "FILTER_NOT_FOUND":
                         "Filter not found",
