improve(task): add translations

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -71,6 +71,12 @@
   "COMPLETE_OK":
         "The task is completed.",
 
+  "TASK_UPDATE_SUCESS":
+        "The task was saved.",
+
+  "TASK_UPDATE_ERROR":
+        "The task could not be saved.",
+
   "COMPLETE":
         "Complete",
 
