feat(history): show comments in the task history
Comments are included in the history of a task.

Related to: CAM-2769

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -19,6 +19,8 @@
         "",
   "HISTORY":
         "History",
+  "COMMENT":
+        "Comment",
   "DESCRIPTION":
         "Description",
   "SELECT_TASK_IN_LIST":
