feat(history): add form to add comments to a task
Introduce a modal form to enter comments for a task

Related to CAM-2770

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -21,6 +21,14 @@
         "History",
   "COMMENT":
         "Comment",
+  "COMMENT_CREATE":
+        "Add Comment",
+  "COMMENT_MESSAGE_PLACEHOLDER":
+        "Enter Comment",
+  "COMMENT_SAVE_ERROR":
+        "Comment could not be saved",
+  "COMMENT_SAVE_SUCCESS":
+        "Comment saved successfully",
   "DESCRIPTION":
         "Description",
   "SELECT_TASK_IN_LIST":
