feat(search): add search box to search within selected filter
related to CAM-2756

--- a/client/client/scripts/navigation/locales/en.json
+++ b/client/client/scripts/navigation/locales/en.json
@@ -4,5 +4,15 @@
   "PRIORITY":
                   "Priority",
   "CREATION_DATE":
-                  "Created"
+                  "Created",
+  "SEARCH_PLACEHOLDER":
+                  "Search for Tasks",
+  "DELETE_SEARCH":
+                  "Remove search",
+  "PROPERTY":
+                  "Property",
+  "OPERATOR":
+                  "Operator",
+  "INVALID_SEARCH":
+                  "This search query is not valid"
 }
