fix(task history): load history on task change only if tab is active
when the user changes the task, the history of the new task is loaded if
and only if the history tab is active

related to CAM-2769

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -93,5 +93,65 @@
         "Complete",
 
   "NONE":
-        "None"
+        "None",
+
+  "Assign":
+        "Assign",
+  "Claim":
+        "Claim",
+  "Complete":
+        "Complete",
+  "Create":
+        "Create",
+  "Delegate":
+        "Delegate",
+  "Delete":
+        "Delete",
+  "Resolve":
+        "Resolve",
+  "SetOwner":
+        "Set Owner",
+  "SetPriority":
+        "Set Priority",
+  "Update":
+        "Update",
+  "Activate":
+        "Activate",
+  "Suspend":
+        "Suspend",
+  "AddUserLink":
+        "Add User Link",
+  "DeleteUserLink":
+        "Delete User Link",
+  "AddGroupLink":
+        "Add Group Link",
+  "DeleteGroupLink":
+        "Delete Group Link",
+  "AddAttachment":
+        "Add Attachment",
+  "DeleteAttachment":
+        "Delete Attachment",
+
+  "assignee":
+        "Assignee",
+  "delegation":
+        "Delegation",
+  "delete":
+        "Delete",
+  "description":
+        "Description",
+  "dueDate":
+        "Due date",
+  "followUpDate":
+        "Follow-up date",
+  "name":
+        "Name",
+  "owner":
+        "Owner",
+  "parentTask":
+        "Parent task",
+  "priority":
+        "Priority",
+  "caseInstanceId":
+        "Case instance id"
 }
