impr(task diagram): prevent loading of diagram when tab not selected
This commit also add some CSS styling.

Related to: CAM-2652

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -13,6 +13,8 @@
         "Owner",
   "DIAGRAM":
         "Diagram",
+  "RENDERING":
+        "Rendering…",
   "FORM":
         "Form",
   "NO_TASK_FORM":
