chore(login/logout): prevent unnecessary request
- clean up code base to login and logout from tasklist
- now unnecessary request will not be perfomed

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -105,5 +105,8 @@
   "SEARCH_TASK_BY_NAME":
                         "Search by task name, case sensitive.",
   "NO_MATCHING_TASK":
-                        "No task matching filters found."
+                        "No task matching filters found.",
+
+  "NO_AVAILABLE_FILTER":
+                        "No filter available."
 }
