refact(filter/modal): refactor the handling of filter modal dialog
related to CAM-2896

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -21,6 +21,10 @@
 
   "FILTER_NOT_FOUND":
                         "Filter not found",
+
+  "FILTER_FORM_AUTHORIZATIONS_HINT":
+                        "This section is aimed to set the authorizations for the filter.",
+
   "FILTER_AUTHORIZAION_NOT_FOUND":
                         "Filter authorizations not found",
 
