impr(layout): work on visual feedback of selected elements

--- a/client/client/scripts/variable/locales/en.json
+++ b/client/client/scripts/variable/locales/en.json
@@ -9,10 +9,10 @@
                     "Value of",
   "DOWNLOAD":
                     "Download",
-  "LESS":
-                    "Less",
-  "MORE":
-                    "More",
+  "LESS_VARIABLES":
+                    "Show less variables",
+  "MORE_VARIABLES":
+                    "Show more variables",
   "TOGGLE":
                     "Toggle"
 }
