feat(groups): edit groups for task
make groups editable with modal dialog comparable to cockpit

related to CAM-2740

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -9,6 +9,20 @@
         "Due date",
   "ASSIGNEE":
         "Assignee",
+  "GROUPS":
+        "Groups",
+  "GROUPS_EDIT":
+        "Edit Groups",
+  "GROUP_ADD_ERROR":
+        "Group could not be added",
+  "GROUP_ADD_SUCCESS":
+        "Group added successfully",
+  "GROUP_DELETE_ERROR":
+        "Group could not be removed",
+  "GROUP_DELETE_SUCCESS":
+        "Group removed successfully",
+  "ADD_GROUPS":
+        "add groups",
   "OWNER":
         "Owner",
   "DIAGRAM":
