impr(plugins): add two "frontend" plugin points
- tasklist.task.action
- tasklist.task.detail

related to CAM-2914

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -33,6 +33,8 @@
         "Comment saved successfully",
   "DESCRIPTION":
         "Description",
+  "NO_DESCRIPTION":
+        "Note there is no description of the task.",
   "SELECT_TASK_IN_LIST":
         "Select a task in the list.",
   "CLAIM_TASK":
