impr(history): display loader when loading history data

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -21,6 +21,8 @@
         "",
   "HISTORY":
         "History",
+  "NO_HISTORY":
+        "There is no history for the task.",
   "COMMENT":
         "Comment",
   "COMMENT_CREATE":
