chore(groups): localize labels in edit group dialog
related to CAM-2740

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -9,10 +9,18 @@
         "Due date",
   "ASSIGNEE":
         "Assignee",
+  "ACTION":
+        "Action",
   "GROUPS":
         "Groups",
   "GROUPS_EDIT":
         "Edit Groups",
+  "CURRENT_GROUPS":
+        "Current group(s)",
+  "GROUP_ID":
+        "Group ID",
+  "GROUP_ADD":
+        "Add a group",
   "GROUP_ADD_ERROR":
         "Group could not be added",
   "GROUP_ADD_SUCCESS":
