impr(search): use before and after as operators for date queries
related to CAM-2756

--- a/client/client/scripts/navigation/locales/en.json
+++ b/client/client/scripts/navigation/locales/en.json
@@ -14,5 +14,9 @@
   "OPERATOR":
                   "Operator",
   "INVALID_SEARCH":
-                  "This search query is not valid"
+                  "This search query is not valid",
+  "BEFORE":
+                  "before",
+  "AFTER":
+                  "after"
 }
