--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -115,7 +115,7 @@
         "The task has been assigned.",
 
   "COMPLETE_ERROR":
-        "An error happend while submitting the task form.",
+        "An error happend while submitting the task form",
   "COMPLETE_OK":
         "The task is completed.",
 
@@ -124,6 +124,11 @@
 
   "TASK_UPDATE_ERROR":
         "The task could not be saved.",
+
+  "TASK_NOT_EXIST":
+        "The task does not exist anymore",
+  "INSTANCE_SUSPENDED":
+        "The task is currently suspended",
 
   "COMPLETE":
         "Complete",
