chore(groups): refresh groups when opening the groups dialog
related to CAM-2611

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -30,7 +30,7 @@
   "GROUP_DELETE_SUCCESS":
         "Group removed successfully",
   "ADD_GROUPS":
-        "add groups",
+        "Add groups",
   "OWNER":
         "Owner",
   "DIAGRAM":
