impr(filters): change the layout of filter details
Related to: CAM-2779

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -3,6 +3,8 @@
                         "Create a filter",
   "FILTER_EDIT":
                         "Edit filter",
+  "FILTER_DETAILS":
+                        "Filter details",
   "FILTER_DELETE":
                         "Delete filter",
 
