chore(variables): extract modal dialog into own folder
related to CAM-2888

--- a/client/client/scripts/variable/locales/en.json
+++ b/client/client/scripts/variable/locales/en.json
@@ -18,5 +18,11 @@
   "MORE_VARIABLES":
                     "Show more variables",
   "TOGGLE":
-                    "Toggle"
+                    "Toggle",
+  "SERIALIZED":
+                    "Serialized",
+  "DESERIALIZED":
+                    "Deserialized",
+  "DESERIALIZATION_ERROR":
+                    "Deserialization error"
 }
