--- a/client/client/scripts/services/locales/en.json
+++ b/client/client/scripts/services/locales/en.json
@@ -1,4 +1,6 @@
 {
-  "ASSIGN_NOTE":
-                  "You are assigned to the following tasks in the same process"
+  "ASSIGN_NOTE_PROCESS":
+                  "You are assigned to the following tasks in the same process",
+  "ASSIGN_NOTE_CASE":
+                  "You are assigned to the following tasks in the same case"
 }
