feat(task): add a link to open task in standard layout
Related to: CAM-2976

--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -114,5 +114,8 @@
                         "No task matching filters found.",
 
   "NO_AVAILABLE_FILTER":
-                        "No filter available."
+                        "No filter available.",
+
+  "PERMALINK":
+                        "Permanent link"
 }
