--- a/client/client/scripts/form/locales/en.json
+++ b/client/client/scripts/form/locales/en.json
@@ -1,7 +1,14 @@
 {
-  "EXTERNAL_FORM_NOT_SUPPORTED":
-      "The external forms a currently not supported.",
-
   "FORM_FAILURE":
-      "Form failure:"
+      "Form failure:",
+  "INIT_EXTERNAL_FORM_FAILED":
+      "Cannot initialize external form url: either task id or process definition key must be provided. Try to refresh the page to try again.",
+  "TASK_EXTERNAL_FORM_NOTE":
+      "This task contains an external form to complete it. In order to open the external form click on the \"Open external form\" link below.",
+  "PROCESS_EXTERNAL_FORM_NOTE":
+      "This process contains an external form to start a new process instance. In order to open the external form click on the \"Open external form\" link below.",
+  "USE_GENERIC_FORM":
+      "You can set variables, using a generic form, by clicking the \"Add a variable\" link below.",
+  "EXTERNAL_FORM_LINK":
+      "Open external form"
 }
