impr(forms): delete saved form entries after one week
impr(forms): show tooltip hint for save button

related to CAM-2737

--- a/client/client/scripts/form/locales/en.json
+++ b/client/client/scripts/form/locales/en.json
@@ -10,5 +10,7 @@
   "USE_GENERIC_FORM":
       "You can set variables, using a generic form, by clicking the \"Add a variable\" link below.",
   "EXTERNAL_FORM_LINK":
-      "Open external form"
+      "Open external form",
+  "SAVE_HINT":
+      "Save the current state of the form to complete it later"
 }
