impr(diagram): improve integration of bpmn-js
related to CAM-2652, CAM-3001

--- a/client/client/scripts/task/locales/en.json
+++ b/client/client/scripts/task/locales/en.json
@@ -69,6 +69,8 @@
         "Diagram",
   "RENDERING":
         "Rendering…",
+  "DIAGRAM_RENDER_FAILURE":
+        "Failure",
   "FORM":
         "Form",
   "NO_TASK_FORM":
