--- a/client/client/scripts/filter/locales/en.json
+++ b/client/client/scripts/filter/locales/en.json
@@ -127,5 +127,11 @@
                         "No filter available.",
 
   "PERMALINK":
-                        "Permanent link"
+                        "Permanent link",
+
+  "TASK_LIST_LOADING_FAILURE":
+                        "Loading the list of tasks finished with failures. Try to refresh the page to try again.",
+
+  "FILTERS_LOADING_FAILURE":
+                        "Loading the filters finished with failures. Try to refresh the page to try again."
 }
