impr(locale): add central locale file
related to CAM-2837

--- a/client/client/scripts/form/locales/en.json
+++ b/client/client/scripts/form/locales/en.json
@@ -24,7 +24,5 @@
   "VARIABLE_NAME":
                         "Variable name",
   "VARIABLE_TYPE":
-                        "Variable type",
-  "VARIABLE_VALUE":
-                        "Variable value"
+                        "Variable type"
 }
