--- a/client/client/scripts/locales/en.json
+++ b/client/client/scripts/locales/en.json
@@ -1,5 +1,10 @@
 {
-  "camDateLocales": {
+  "VARIABLE_VALUE":
+                  "Value",
+
+
+
+  "dateLocales": {
     "months": [
       "January",
       "February",
